Fixed a bunch of things

--- a/themes/antares-2/layout/_partial/footer.ejs
+++ b/themes/antares-2/layout/_partial/footer.ejs
@@ -1,4 +1,4 @@
-<footer class="footer noscript">
+<footer class="footer noscript" role="contentinfo">
   <div class="search-wrapper">
     <%- partial('_partial/search-view') %>
   </div>
@@ -58,7 +58,7 @@
   </section>
 
   <p>&copy; <%- new Date().getFullYear() %> Francis Rubio</p>
-  <p><a href="#">Back to top</a></p>
+  <p><a href="#top">Back to top</a></p>
 </footer>
 
 <%- js('js/index.js') %>
