Changed favicons to latest logo

--- a/themes/antares-2/layout/_partial/head.ejs
+++ b/themes/antares-2/layout/_partial/head.ejs
@@ -29,18 +29,22 @@ function renderLinkPaths(pathArray = []) {
   <meta name="author" content="<%= config.author %>" />
   
   <!-- Favicon and PWA theme -->
-  <link rel="apple-touch-icon" sizes="180x180" href="/antares-blog/images/apple-touch-icon.png?v=alQq8wbjvL">
-  <link rel="icon" type="image/png" sizes="32x32" href="/antares-blog/images/favicon-32x32.png?v=alQq8wbjvL">
-  <link rel="icon" type="image/png" sizes="16x16" href="/antares-blog/images/favicon-16x16.png?v=alQq8wbjvL">
-  <link rel="manifest" href="/antares-blog/images/site.webmanifest?v=alQq8wbjvL">
-  <link rel="mask-icon" href="/antares-blog/images/safari-pinned-tab.svg?v=alQq8wbjvL" color="#ff5555">
-  <link rel="shortcut icon" href="/antares-blog/images/favicon.ico?v=alQq8wbjvL">
-  <meta name="apple-mobile-web-app-title" content="Antares Programming">
-  <meta name="application-name" content="Antares Programming">
-  <meta name="msapplication-TileColor" content="#da532c">
-  <meta name="msapplication-TileImage" content="/antares-blog/images/mstile-144x144.png?v=alQq8wbjvL">
-  <meta name="msapplication-config" content="/antares-blog/images/browserconfig.xml?v=alQq8wbjvL">
-  <meta name="theme-color" content="#ffffdd">
+  <link rel="apple-touch-icon" sizes="180x180" href="/antares-blog/images/apple-touch-icon.png?v=yyL3E0AWom">
+  <link rel="icon" type="image/png" sizes="32x32" href="/antares-blog/images/favicon-32x32.png?v=yyL3E0AWom">
+  <link rel="icon" type="image/png" sizes="194x194" href="/antares-blog/images/favicon-194x194.png?v=yyL3E0AWom">
+  <link rel="icon" type="image/png" sizes="192x192" href="/antares-blog/images/android-chrome-192x192.png?v=yyL3E0AWom">
+  <link rel="icon" type="image/png" sizes="16x16" href="/antares-blog/images/favicon-16x16.png?v=yyL3E0AWom">
+  <link rel="manifest" href="/antares-blog/images/site.webmanifest?v=yyL3E0AWom">
+  <link rel="mask-icon" href="/antares-blog/images/safari-pinned-tab.svg?v=yyL3E0AWom" color="#efaa00">
+  <link rel="shortcut icon" href="/antares-blog/images/favicon.ico?v=yyL3E0AWom">
+  <meta name="apple-mobile-web-app-title" content="Antares">
+  <meta name="application-name" content="Antares">
+  <meta name="msapplication-TileColor" content="#ffc40d">
+  <meta name="msapplication-TileImage" content="/antares-blog/images/mstile-144x144.png?v=yyL3E0AWom">
+  <meta name="msapplication-config" content="/antares-blog/images/browserconfig.xml?v=yyL3E0AWom">
+  <meta name="theme-color" content="#bbbbbb">
+
+
 
   <!-- Twitter Card data -->
   <meta name="twitter:card" value="<%- strip_html(description) %>">
