--- a/themes/antares-2/layout/_partial/head.ejs
+++ b/themes/antares-2/layout/_partial/head.ejs
@@ -67,6 +67,7 @@ function renderLinkPaths(pathArray = []) {
   <meta property="og:image" content="http://celestialcinnmaon.github.io/<%- postCoverPath %>" />
   <meta property="og:description" content="<%- strip_html(description) %>" /> 
 
+  <%- css('css/literata-book.css') %>
   <%- css('css/style.css') %>
 
   <%
@@ -92,8 +93,8 @@ function renderLinkPaths(pathArray = []) {
   />
   
   <link href="https://fonts.googleapis.com/css?family=Roboto+Mono:400,700" rel="stylesheet"> 
-  <link href="https://fonts.googleapis.com/css?family=Lora:400,400i&amp;subset=latin-ext" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css?family=Eczar:400,700&amp;subset=latin-ext" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Source+Code+Pro" rel="stylesheet">
+
   <!--
     HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries
   -->
