--- a/themes/antares-2/layout/_partial/footer.ejs
+++ b/themes/antares-2/layout/_partial/footer.ejs
@@ -58,7 +58,7 @@
   </section>
 
   <p>&copy; <%- new Date().getFullYear() %> Francis Rubio</p>
-  <p><a href="#top">Back to top</a></p>
+  <p id="back-to-top"><a href="#top">Back to top</a></p>
 </footer>
 
 <%- js('js/index.js') %>
