--- a/themes/antares-2/source/css/literata-book.css
+++ b/themes/antares-2/source/css/literata-book.css
@@ -1,16 +1,25 @@
 @font-face {
     font-family: "Literata Bookset";
-    src: 
-        url(fonts/LiterataBook.otf),
-        url(fonts/LiterataBook-Bold.otf);
-    font-weight: normal bold;
+    src: url(fonts/LiterataBook.otf);
+    font-weight: normal;
 }
 
 @font-face {
     font-family: "Literata Bookset";
-    src: 
-        url(fonts/LiterataBook-Italic.otf),
-        url(fonts/LiterataBook-BoldItalic.otf);
-    font-weight: normal bold;
+    src: url(fonts/LiterataBook-Bold.otf);
+    font-weight: bold;
+}
+
+@font-face {
+    font-family: "Literata Bookset";
+    src: url(fonts/LiterataBook-Italic.otf);
+    font-weight: normal;
+    font-style: italic;
+}
+
+@font-face {
+    font-family: "Literata Bookset";
+    src: url(fonts/LiterataBook-BoldItalic.otf);
+    font-weight: bold;
     font-style: italic;
 }
