Fixed HTML validation errors

--- a/themes/antares-2/layout/_partial/article-excerpt.ejs
+++ b/themes/antares-2/layout/_partial/article-excerpt.ejs
@@ -8,8 +8,8 @@
     <% 
     if(item.author) { %>
         <div class="meta">
-            <span class="author-name"><%= item.author.name %></span>
-            <time datetime="<%= new Date(item.date).toJSON() %>" class="article-date"><%= item.date.format(config.date_format) %></time>
+            <address class="author-name"><%= item.author.name %></address>
+            <time pubdate datetime="<%= new Date(item.date).toJSON() %>" class="article-date"><%= item.date.format(config.date_format) %></time>
         </div>
     <% } %>
     <!-- Content -->
