--- a/themes/antares-2/layout/_partial/article-featured.ejs
+++ b/themes/antares-2/layout/_partial/article-featured.ejs
@@ -5,8 +5,8 @@
             <h2><a class="post__title" href="<%- config.root %><%- item.path %>"><%- item.title %></a></h2>
         </header>
         <section class="post__meta">
-            <span class="author-name"><%= item.author.name %></span>
-            <time datetime="<%= new Date(item.date).toJSON() %>" class="article-date"><%= item.date.format(config.date_format) %></time>
+            <address class="author-name"><%= item.author.name %></address>
+            <time pubdate datetime="<%= new Date(item.date).toJSON() %>" class="article-date"><%= item.date.format(config.date_format) %></time>
         </section>
     </div>
     <img src="<%- config.root + item.lang + '/' + item.slug + '/' + item.cover_image %>" alt="" class="cover-display">
