--- a/themes/antares-2/layout/_partial/article.ejs
+++ b/themes/antares-2/layout/_partial/article.ejs
@@ -3,17 +3,18 @@
   <% if(post.is_featured) { %>
   <header class="cover">
     <div class="post__wrapper">
-      <header class="post__header">
+      <section class="post__header">
         <small class="label">Featured</small>
         <h2><a class="post__title" href="<%- config.root %><%- post.path %>">
             <%- item.title %></a></h2>
-      </header>
-      <section class="post__meta">
-        <span class="author-name">
-          <%= item.author.name %></span>
-        <time datetime="<%= new Date(item.date).toJSON() %>" class="article-date">
-          <%= item.date.format(config.date_format) %></time>
       </section>
+      <div class="post__meta">
+        <address class="author-name">
+          <%= item.author.name %>
+        </address>
+        <time pubdate datetime="<%= new Date(item.date).toJSON() %>" class="article-date">
+          <%= item.date.format(config.date_format) %></time>
+      </div>
     </div>
     <img src="<%- config.root + item.lang + '/' + item.slug + '/' + item.cover_image %>" alt="" class="cover-display">
   </header>
