--- a/themes/antares-2/layout/_partial/head.ejs
+++ b/themes/antares-2/layout/_partial/head.ejs
@@ -47,7 +47,7 @@ function renderLinkPaths(pathArray = []) {
 
 
   <!-- Twitter Card data -->
-  <meta name="twitter:card" value="<%- strip_html(description) %>">
+  <meta name="twitter:card" content="<%- strip_html(description) %>">
 
   <%
     var postCoverPath = config.root + 'images/Website Cover v3.png';
