--- a/themes/antares-2/source/css/style.css
+++ b/themes/antares-2/source/css/style.css
@@ -123,7 +123,7 @@ body {
     background-color: var(--bg);
     color: var(--text-color);
     min-height: 100vh;
-    font-family: var(--sans-serif), "Twemoji", sans-serif;
+    font-family: var(--sans-serif), "Noto Emoji", sans-serif;
     border: 2vmin solid var(--bg-d3);
 }
 
@@ -487,7 +487,10 @@ em {
 
 .author-name {
     padding-right: 1rem;
+    display: inline;
+    font-style: normal;
 }
+
 
 .section {
     max-width: 60ch;
