Finished 2019 Web Dev post and fixed code styles

--- a/themes/antares-2/source/css/style.css
+++ b/themes/antares-2/source/css/style.css
@@ -76,6 +76,10 @@ html {
     --error: #e33;
     --success: #adb;
     --focus-color: var(--accent-darker);
+
+    --console-color: hsl(140, 50%, 45%);
+    --bg-console: #000;
+    --text-color-console: #eee;
 }
 
 :lang(tl) {
@@ -804,6 +808,21 @@ em {
         margin-right: -4vw;
     }
 
+    .side-callout:nth-of-type(even) {
+        flex-direction: row-reverse;
+        text-align: left;
+    }
+    
+    .side-callout:nth-of-type(even) p {
+        text-indent: 0;
+    }
+
+    .side-callout:nth-of-type(even) header {
+        transform: rotate(0.5turn);
+        padding-left: 0;
+        padding-right: 1rem;
+    }
+/*-------------------*/
     .cover .post__title,
     .post--featured .post__title {
         font-size: 2.75rem;
@@ -1454,73 +1473,6 @@ abbr:focus {
     width: 100%;
 }
 
-.highlight {
-    max-width: 70ch;
-    margin: 0.5rem auto;
-    background-color: var(--gray);
-    border-radius: 4px;
-    position: relative;
-    clear: both;
-    border: 1px solid var(--gray-i2);
-    overflow: auto;
-    position: relative;
-}
-
-.highlight .tag {
-    background: none;
-    padding: initial;
-    margin: initial;
-}
-
-.highlight figcaption {
-    position: absolute;
-    top: 0;
-    background-color: var(--bg-l1);
-    border-radius: 4px;
-    border-top-left-radius: 0;
-    border-top-right-radius: 0;
-    height: auto;
-    color: var(--text-color);
-    padding: 0 1ch;
-    font-family: var(--sans-serif), sans-serif;
-    font-weight: normal;
-    z-index: 1;
-}
-
-.highlight table {
-    border-collapse: collapse;
-}
-
-.highlight figcaption + table {
-    margin-top: 1rem;
-    overflow: auto;
-    width: 100%;
-    display: block;
-}
-
-.highlight pre {
-    color: var(--text-on-gray);
-    font-size: 1rem;
-    line-height: 2;
-}
-
-td.code {
-    max-width: 25ch;
-}
-
-.code .line {
-    padding: 10px 1rem;
-}
-
-.gutter {
-    background-color: var(--gray-i1);
-    padding: 1ch;
-    position: sticky;
-    top: 0;
-    bottom: 0;
-    left: 0;
-}
-
 code {
     font-size: inherit;
     padding: 0.25ch 0.25ch;
@@ -1534,37 +1486,7 @@ code {
     display: initial;
 }
 
-.keyword {
-    color: hsl(330, 100%, 50%);
-}
 
-.attr {
-    color: hsl(240, 100%, 70%);
-}
-
-.string {
-    color: hsl(40, 100%, 43%);
-}
-
-.number {
-    color: hsl(120, 100%, 33%);
-}
-
-.dark .keyword {
-    color: #ff99cc;
-}
-
-.dark .attr {
-    color: #ccf;
-}
-
-.dark .string {
-    color: #ffa;
-}
-
-.dark .number {
-    color: #afa;
-}
 
 .example-container {
     border: 1px solid #0003;
@@ -1630,7 +1552,8 @@ code {
         flex: 1;
         order: 1;
         align-self: flex-start;
-        padding-block-start: 1rem;
+        padding-left: 1rem;
+        text-align: var(--text-align);
     }
 
     .side-callout h1,
@@ -1958,4 +1881,118 @@ a.archive-article-date:hover {
 .twitter-tweet cite {
     font-style: normal;
     font-family: var(--sans-serif);
+}
+
+kbd {
+    font-size: 1rem;
+}
+
+kbd kbd {
+    background-color: var(--bg-d2);
+    padding: 3px;
+    border-radius: 3px;
+    box-shadow: 1px 2px 0 0 var(--bg-d3);
+}
+
+samp kbd {
+    all: unset;
+    font-size: 1rem;
+}
+
+samp>kbd:first-child::before {
+    content: '$ ';
+    color: var(--console-color);
+}
+
+samp {
+    background-color: var(--bg-d2);
+    border-radius: 3px;
+    padding: 3px;
+    box-decoration-break: clone;
+}
+
+pre {
+    max-width: 100%;
+    overflow: auto;
+    clear: both;
+    padding: 1rem;
+    background-color: var(--bg-console);
+    color: var(--text-color-console);
+    border-radius: 5px;
+}
+
+pre samp {
+    all: unset;
+}
+
+pre samp kbd {
+    color: var(--category);
+}
+
+.prompt {
+    color: var(--console-color);
+}
+
+.highlight {
+	background-color: var(--bg-d1);
+	border: 1px solid var(--bg-d2);
+	display: block;
+	width: 90%;
+}
+
+.highlight code {
+    all: unset;
+    color: var(--text-color);
+}
+
+.post__content {
+    width: 100vw;
+}
+
+.hljs-name,
+.hljs-keyword,
+.keyword {
+    color: hsl(330, 100%, 50%);
+}
+
+.hljs-attr,
+.attr {
+    color: hsl(240, 100%, 70%);
+}
+
+.hljs-string,
+.string {
+    color: hsl(40, 100%, 43%);
+}
+
+.number {
+    color: hsl(120, 100%, 33%);
+}
+
+.dark .hljs-name,
+.dark .hljs-keyword,
+.dark .keyword {
+    color: #ff99cc;
+}
+
+.dark .hljs-attr,
+.dark .attr {
+    color: #ccf;
+}
+
+.dark .hljs-string,
+.dark .string {
+    color: #ffa;
+}
+
+.dark .number {
+    color: #afa;
+}
+
+.hljs-built_in {
+    color: #35f;
+}
+
+.hljs-params {
+    color: #3a3;
 }
